--- a/langclass.ipynb
+++ b/langclass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ccd43944",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "12536520",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "id": "bbef77ed",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
    ],
    "source": [
     "llmc = LlamaCpp(\n",
-    "    model_path=\"./llachat.bin\",\n",
+    "    model_path=\"../llachat.bin\",\n",
     "    temperature=0,\n",
     "    max_tokens=2000,\n",
     "    top_p=1,\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "5955d89b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "id": "6f8f63f7",
    "metadata": {},
    "outputs": [],
@@ -71,14 +71,14 @@
     "You are a CEO of telecommunications company.<</SYS>>\n",
     "\n",
     "Is comment that is \"{comment}\" generally related to telecommunications company?\n",
-    "Please answer me in short answer\n",
+    "Please answer within 30 characters\n",
     "\n",
     "[/INST]'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "id": "eb0af997",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "id": "8c34d5e4",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "id": "0fd23073",
    "metadata": {},
    "outputs": [
@@ -123,22 +123,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  As the CEO of a telecommunications company, I can tell you that \"it is slow\" is often a comment related to network performance or service speed. Customers may complain about slow internet speeds, delayed text messages, or poor call quality, which can impact their overall satisfaction with the company's services."
+      "  As the CEO of a telecommunications company, I can tell you that \"배고프다\" (baegopdada) is not a term commonly used in our industry. It is a Korean word that roughly translates to \"I'm hungry,\" and it has no direct relation to telecommunications or the operations of a telecom company."
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'  As the CEO of a telecommunications company, I can tell you that \"it is slow\" is often a comment related to network performance or service speed. Customers may complain about slow internet speeds, delayed text messages, or poor call quality, which can impact their overall satisfaction with the company\\'s services.'"
+       "'  As the CEO of a telecommunications company, I can tell you that \"배고프다\" (baegopdada) is not a term commonly used in our industry. It is a Korean word that roughly translates to \"I\\'m hungry,\" and it has no direct relation to telecommunications or the operations of a telecom company.'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain1.invoke({'comment':'It is slow'})"
+    "chain1.invoke({'comment':'배고프다'})"
    ]
   },
   {
