Feat: 🎨 restructure settemplate.py and config

--- a/project/utils/yaml_test.ipynb
+++ b/project/utils/yaml_test.ipynb
@@ -53,21 +53,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from configs import ParamConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "params = ParamConfig()\n",
+    "\n",
+    "kwargs = params.load('/home/wsl_han/aivle_project/remote/ENTER-AI/project/utils/configs copy.yaml')\n",
+    "\n",
+    "config = params.load()\n",
+    "for key,item in kwargs.items():\n",
+    "    config[key] = item\n",
+    "    \n",
+    "params.save(config, '/home/wsl_han/aivle_project/remote/ENTER-AI/project/utils')\n",
+    "# config\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting addict\n",
-      "  Downloading addict-2.4.0-py3-none-any.whl (3.8 kB)\n",
-      "Installing collected packages: addict\n",
-      "Successfully installed addict-2.4.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'스펀지밥\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "params.load().chatgpt.templates.conversation.system_default"
+   ]
   },
   {
    "cell_type": "code",
